Fix hero-section Body Overflow

--- a/style/scss/sections/hero-section.scss
+++ b/style/scss/sections/hero-section.scss
@@ -16,7 +16,6 @@
 
     .hero-section-inner {
         position: relative;
-        width: 100vw;
         height: 60vh;
         background-image: url(../images/hero_bg.png);
         background-color: $black;
